--- a/clientUI/src/app/app.component.html
+++ b/clientUI/src/app/app.component.html
@@ -5,12 +5,10 @@
   </h1>
   <div class="container">
     <p>
-      Deliveroo is on a mission to transform the way you order food.<br/>We partner with the best restaurants in the
-      business
-      – from local hotspots to national favourites – and bring you the food you love, right to your door.
+      BlaBlaCar is the world's leading long distance carpooling service, connecting drivers with empty seats to people travelling the same way.
     </p>
     <div class="alert alert-success">
-      No problems at Uberoo
+      No problems at BlablaMove
     </div>
     <ngx-charts-line-chart [results]="data" [view]="view"
                            [scheme]="colorScheme"
@@ -25,6 +23,6 @@
                            [yScaleMin]="yScaleMin"
                            [yScaleMax]="yScaleMax"
                            [timeline]="timeline"></ngx-charts-line-chart>
-    <a class="btn btn-danger"><i class="fas fa-thumbs-down"></i> I have a problem with Uberoo</a>
+    <a class="btn btn-danger"><i class="fas fa-thumbs-down"></i> I have a problem with BlablaMove</a>
   </div>
 </div>
