--- a/adminMarketingUI/src/app/app.component.html
+++ b/adminMarketingUI/src/app/app.component.html
@@ -1,7 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-<h2>Coming soon! </h2>
+<li><a routerLink="admin">Admin</a></li>
+<li><a routerLink="marketing">Marketing</a></li>
+<router-outlet></router-outlet>
