Ngx-admin - Marketing marker

--- a/ngx-admin/src/app/pages/marketing/heatmap/heatmap.component.html
+++ b/ngx-admin/src/app/pages/marketing/heatmap/heatmap.component.html
@@ -1,6 +1,10 @@
 <nb-card>
   <nb-card-header>Leaflet Maps</nb-card-header>
   <nb-card-body>
-    <div leaflet [leafletOptions]="options"></div>
+    <button type="button"
+            class="btn btn-primary"
+            (click)="addMarker()">Add Marker</button>
+    <div leaflet [leafletOptions]="options" [leafletLayers]="markers" (leafletMapZoomEnd)="zoomend(this)"></div>
   </nb-card-body>
 </nb-card>
+s
