Heatmap for marketing UI

--- a/adminMarketingUI/src/app/pages/dashboard/dashboard.component.html
+++ b/adminMarketingUI/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row">
   <nb-card>
-    <nb-card-body>Hello from ngx-admin sandbox project.</nb-card-body>
+    <nb-card-body>Welcome to the Blablamove Dashboard website.</nb-card-body>
   </nb-card>
 </div>
