--- a/clientUI/src/app/reporting/reporting.component.html
+++ b/clientUI/src/app/reporting/reporting.component.html
@@ -1,6 +1,7 @@
 <div [ngClass]="{ 'alert-success': lastHourProblems==0, 'alert-danger': lastHourProblems>0 }" class="alert">
   <span *ngIf="!lastHourProblems">No problems at BlablaMove</span>
   <span *ngIf="lastHourProblems">{{lastHourProblems}} problem</span><span *ngIf="lastHourProblems>1">s</span><span *ngIf="lastHourProblems"> reported the last past hour at BlablaMove</span>
+  <br><span>Last update: {{lastUpdate}}</span>
 </div>
 <ngx-charts-line-chart [results]="data" [view]="view"
                        [scheme]="colorScheme"
