--- a/adminMarketingUI/src/app/pages/admin/admin.component.html
+++ b/adminMarketingUI/src/app/pages/admin/admin.component.html
@@ -1,18 +1,37 @@
-<nb-card>
-  <nb-card-header>Visitors Analytics</nb-card-header>
-  <nb-card-body>
-    <ngx-charts-line-chart [results]="data" [view]="view"
-                           [scheme]="colorScheme"
-                           [gradient]="gradient"
-                           [xAxis]="showXAxis"
-                           [yAxis]="showYAxis"
-                           [legend]="showLegend"
-                           [showXAxisLabel]="showXAxisLabel"
-                           [showYAxisLabel]="showYAxisLabel"
-                           [yAxisLabel]="yAxisLabel"
-                           [autoScale]="autoScale"
-                           [yScaleMin]="yScaleMin"
-                           [yScaleMax]="yScaleMax"
-                           [timeline]="timeline"></ngx-charts-line-chart>
-  </nb-card-body>
-</nb-card>
+<div class="row">
+  <div class="col-md-9">
+    <nb-layout-column>
+      <nb-card>
+        <nb-card-header>Visitors Analytics</nb-card-header>
+        <nb-card-body>
+          <ngx-charts-line-chart [results]="data" [view]="view"
+                                 [scheme]="colorScheme"
+                                 [gradient]="gradient"
+                                 [xAxis]="showXAxis"
+                                 [yAxis]="showYAxis"
+                                 [legend]="showLegend"
+                                 [showXAxisLabel]="showXAxisLabel"
+                                 [showYAxisLabel]="showYAxisLabel"
+                                 [yAxisLabel]="yAxisLabel"
+                                 [autoScale]="autoScale"
+                                 [yScaleMin]="yScaleMin"
+                                 [yScaleMax]="yScaleMax"
+                                 [timeline]="timeline"></ngx-charts-line-chart>
+        </nb-card-body>
+      </nb-card>
+    </nb-layout-column>
+  </div>
+  <div class="col-md-3">
+    <nb-layout-column>
+      <nb-card>
+        <nb-card-header>Blablamove infrastructure status</nb-card-header>
+        <nb-card-body>
+          <infrastructure-checker></infrastructure-checker>
+        </nb-card-body>
+      </nb-card>
+    </nb-layout-column>
+  </div>
+</div>
+
+
+
