Report sent confirmation

--- a/clientUI/src/app/app.component.html
+++ b/clientUI/src/app/app.component.html
@@ -5,7 +5,7 @@
   </h1>
   <div class="container">
     <p>
-      BlaBlaCar is the world's leading long distance carpooling service, connecting drivers with empty seats to people travelling the same way.
+      BlablaMove is the world's leading long distance carpooling service, connecting drivers with empty seats to furniture travelling the same way.
     </p>
     <app-reporting></app-reporting>
   </div>
