--- a/adminMarketingUI/src/app/pages/admin/admin.component.html
+++ b/adminMarketingUI/src/app/pages/admin/admin.component.html
@@ -3,20 +3,11 @@
     <nb-layout-column>
       <nb-card>
         <nb-card-header>Visitors Analytics</nb-card-header>
-        <nb-card-body>
-          <ngx-charts-line-chart [results]="data" [view]="view"
-                                 [scheme]="colorScheme"
-                                 [gradient]="gradient"
-                                 [xAxis]="showXAxis"
-                                 [yAxis]="showYAxis"
-                                 [legend]="showLegend"
-                                 [showXAxisLabel]="showXAxisLabel"
-                                 [showYAxisLabel]="showYAxisLabel"
-                                 [yAxisLabel]="yAxisLabel"
-                                 [autoScale]="autoScale"
-                                 [yScaleMin]="yScaleMin"
-                                 [yScaleMax]="yScaleMax"
-                                 [timeline]="timeline"></ngx-charts-line-chart>
+        <nb-card-body id="chartdiv">
+            <ngx-charts-line-chart id="chart" [results]="data" [view]="view" [scheme]="colorScheme" [gradient]="gradient"
+              [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel"
+              [showYAxisLabel]="showYAxisLabel" [yAxisLabel]="yAxisLabel" [autoScale]="autoScale"
+              [yScaleMin]="yScaleMin" [yScaleMax]="yScaleMax" [timeline]="timeline"></ngx-charts-line-chart>
         </nb-card-body>
       </nb-card>
     </nb-layout-column>
@@ -32,6 +23,3 @@
     </nb-layout-column>
   </div>
 </div>
-
-
-
