Added update interval

--- a/adminMarketingUI/src/app/pages/admin/infrastructure-checker/infrastructure-checker.component.html
+++ b/adminMarketingUI/src/app/pages/admin/infrastructure-checker/infrastructure-checker.component.html
@@ -21,6 +21,9 @@
     </ul>
   </li>
 </ul>
+<br>
+<span [hidden]="seconds_to_update==0">Updating in {{seconds_to_update}} seconds...</span>
+<span [hidden]="seconds_to_update!=0">Refreshing statuses</span>
 
 
 
