--- a/adminMarketingUI/src/app/pages/marketing/created-routes/created-routes.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/created-routes/created-routes.component.html
@@ -1,5 +1,23 @@
 <nb-card>
   <nb-card-header>Last 24h created routes</nb-card-header>
   <nb-card-body>
+    <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Start city</th>
+        <th>End city</th>
+        <th>Date</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let route of routesCreated">
+        <td>{{ route.route_uuid }}</td>
+        <td>{{ route.initialCity }}</td>
+        <td>{{ route.endCity }}</td>
+        <td>{{ route.time }}</td>
+      </tr>
+      </tbody>
+    </table>
   </nb-card-body>
 </nb-card>
