--- a/adminMarketingUI/src/app/pages/marketing/canceled-routes/canceled-routes.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/canceled-routes/canceled-routes.component.html
@@ -1,5 +1,19 @@
 <nb-card>
   <nb-card-header>Last 24h canceled routes</nb-card-header>
   <nb-card-body>
+    <table id="table" class="table table-hover" cellspacing="0">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Date</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let route of routesCanceled">
+        <td>{{ route.route_uuid }}</td>
+        <td>{{ route.time.toISOString() }}</td>
+      </tr>
+      </tbody>
+    </table>
   </nb-card-body>
 </nb-card>
