--- a/adminMarketingUI/src/app/pages/marketing/delivered-items/delivered-items.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/delivered-items/delivered-items.component.html
@@ -1,6 +1,21 @@
 <nb-card>
   <nb-card-header>Last 24h delivered items</nb-card-header>
   <nb-card-body>
-    TODO:
+    <table id="table" class="table table-hover" cellspacing="0">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Item type</th>
+        <th>Time</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let delivery of deliveredItems">
+        <td>{{ delivery.delivery_uuid }}</td>
+        <td>{{ delivery.item_type }}</td>
+        <td>{{ delivery.time.toISOString() }}</td>
+      </tr>
+      </tbody>
+    </table>
   </nb-card-body>
 </nb-card>
