Front end fixes

--- a/adminMarketingUI/src/app/pages/marketing/created-routes/created-routes.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/created-routes/created-routes.component.html
@@ -15,7 +15,7 @@
         <td>{{ route.route_uuid }}</td>
         <td>{{ route.initialCity }}</td>
         <td>{{ route.endCity }}</td>
-        <td>{{ route.time.toISOString() }}</td>
+        <td>{{ route.time }}</td>
       </tr>
       </tbody>
     </table>
