--- a/adminMarketingUI/src/app/pages/marketing/delivered-items/delivered-items.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/delivered-items/delivered-items.component.html
@@ -13,7 +13,7 @@
       <tr *ngFor="let delivery of deliveredItems">
         <td>{{ delivery.delivery_uuid }}</td>
         <td>{{ delivery.item_type }}</td>
-        <td>{{ delivery.time.toISOString() }}</td>
+        <td>{{ delivery.time }}</td>
       </tr>
       </tbody>
     </table>
