--- a/adminMarketingUI/src/app/pages/marketing/delivery-issues/delivery-issues.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/delivery-issues/delivery-issues.component.html
@@ -13,7 +13,7 @@
       <tr *ngFor="let issue of deliveryIssues">
         <td>{{ issue.delivery_uuid }}</td>
         <td>{{ issue.issueType }}</td>
-        <td>{{ issue.time.toISOString() }}</td>
+        <td>{{ issue.time }}</td>
       </tr>
       </tbody>
     </table>
