--- a/adminMarketingUI/src/app/pages/marketing/canceled-routes/canceled-routes.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/canceled-routes/canceled-routes.component.html
@@ -11,7 +11,7 @@
       <tbody>
       <tr *ngFor="let route of routesCanceled">
         <td>{{ route.route_uuid }}</td>
-        <td>{{ route.time.toISOString() }}</td>
+        <td>{{ route.time }}</td>
       </tr>
       </tbody>
     </table>
