--- a/adminMarketingUI/src/app/pages/marketing/delivered-items/delivered-items.component.html
+++ b/adminMarketingUI/src/app/pages/marketing/delivered-items/delivered-items.component.html
@@ -12,7 +12,7 @@
       <tbody>
       <tr *ngFor="let delivery of deliveredItems">
         <td>{{ delivery.delivery_uuid }}</td>
-        <td>{{ delivery.item_type }}</td>
+        <td>{{ delivery.itemType }}</td>
         <td>{{ delivery.time }}</td>
       </tr>
       </tbody>
